UE5下编译通过 但还无法运行

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,3 +27,17 @@ BaseMaterial=/Engine/EngineMaterials/BaseFlattenMaterial.BaseFlattenMaterial
 [/Script/LevelSequence.LevelSequenceProjectSettings]
 LevelSequence.DefaultDisplayRate=30fps
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=63E81E444720875A56D0BD9A1BCDD605
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
