--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,6 +20,7 @@ r.DefaultFeature.AntiAliasing=3
 r.MobileMSAA=8
 r.Mobile.AllowSoftwareOcclusion=True
 r.Shadow.UnbuiltPreviewInGame=False
+r.VirtualTextures=True
 
 [/Script/UnrealEd.HierarchicalLODSettings]
 BaseMaterial=/Engine/EngineMaterials/BaseFlattenMaterial.BaseFlattenMaterial
